src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AC21_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AC21 Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcceptPostalMail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for segmentation of mass mailings.</description>
        <label>Accept Postal Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended_AC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will be checked if Contact has ever attended an Annual Conference. Maintained by automation</inlineHelpText>
        <label>Attended AC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience_Other__c</fullName>
        <description>Audience Type.Collects data from the "Choose All That Applies" Other manual Entry</description>
        <label>Audience_Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Form Link https://www.thinkbabies.org/sign-up/</description>
        <inlineHelpText>Audience Type.Captured from the "Choose All That Apply" on online forms.</inlineHelpText>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I am a parent</fullName>
                </value>
                <value>
                    <fullName>I am an early childhood professional</fullName>
                </value>
                <value>
                    <fullName>I am a professional advocate</fullName>
                </value>
                <value>
                    <fullName>I am a policymaker and/or staff in a policymaker's office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BirthYear__c</fullName>
        <description>The Birth Year of the Account Holder, used in Membership Join Process</description>
        <label>Birth Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1920</fullName>
                </value>
                <value>
                    <fullName>1921</fullName>
                </value>
                <value>
                    <fullName>1922</fullName>
                </value>
                <value>
                    <fullName>1923</fullName>
                </value>
                <value>
                    <fullName>1924</fullName>
                </value>
                <value>
                    <fullName>1925</fullName>
                </value>
                <value>
                    <fullName>1926</fullName>
                </value>
                <value>
                    <fullName>1927</fullName>
                </value>
                <value>
                    <fullName>1928</fullName>
                </value>
                <value>
                    <fullName>1929</fullName>
                </value>
                <value>
                    <fullName>1930</fullName>
                </value>
                <value>
                    <fullName>1931</fullName>
                </value>
                <value>
                    <fullName>1932</fullName>
                </value>
                <value>
                    <fullName>1933</fullName>
                </value>
                <value>
                    <fullName>1934</fullName>
                </value>
                <value>
                    <fullName>1935</fullName>
                </value>
                <value>
                    <fullName>1936</fullName>
                </value>
                <value>
                    <fullName>1937</fullName>
                </value>
                <value>
                    <fullName>1938</fullName>
                </value>
                <value>
                    <fullName>1939</fullName>
                </value>
                <value>
                    <fullName>1940</fullName>
                </value>
                <value>
                    <fullName>1941</fullName>
                </value>
                <value>
                    <fullName>1942</fullName>
                </value>
                <value>
                    <fullName>1943</fullName>
                </value>
                <value>
                    <fullName>1944</fullName>
                </value>
                <value>
                    <fullName>1945</fullName>
                </value>
                <value>
                    <fullName>1946</fullName>
                </value>
                <value>
                    <fullName>1947</fullName>
                </value>
                <value>
                    <fullName>1948</fullName>
                </value>
                <value>
                    <fullName>1949</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <label>Birth Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1920</fullName>
                </value>
                <value>
                    <fullName>1921</fullName>
                </value>
                <value>
                    <fullName>1922</fullName>
                </value>
                <value>
                    <fullName>1923</fullName>
                </value>
                <value>
                    <fullName>1924</fullName>
                </value>
                <value>
                    <fullName>1925</fullName>
                </value>
                <value>
                    <fullName>1926</fullName>
                </value>
                <value>
                    <fullName>1927</fullName>
                </value>
                <value>
                    <fullName>1928</fullName>
                </value>
                <value>
                    <fullName>1929</fullName>
                </value>
                <value>
                    <fullName>1930</fullName>
                </value>
                <value>
                    <fullName>1931</fullName>
                </value>
                <value>
                    <fullName>1932</fullName>
                </value>
                <value>
                    <fullName>1933</fullName>
                </value>
                <value>
                    <fullName>1934</fullName>
                </value>
                <value>
                    <fullName>1935</fullName>
                </value>
                <value>
                    <fullName>1936</fullName>
                </value>
                <value>
                    <fullName>1937</fullName>
                </value>
                <value>
                    <fullName>1938</fullName>
                </value>
                <value>
                    <fullName>1939</fullName>
                </value>
                <value>
                    <fullName>1940</fullName>
                </value>
                <value>
                    <fullName>1941</fullName>
                </value>
                <value>
                    <fullName>1942</fullName>
                </value>
                <value>
                    <fullName>1943</fullName>
                </value>
                <value>
                    <fullName>1944</fullName>
                </value>
                <value>
                    <fullName>1945</fullName>
                </value>
                <value>
                    <fullName>1946</fullName>
                </value>
                <value>
                    <fullName>1947</fullName>
                </value>
                <value>
                    <fullName>1948</fullName>
                </value>
                <value>
                    <fullName>1949</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookstore_Purchase_Year__c</fullName>
        <inlineHelpText>Updated by flow, used to Identify users who purchased an item from the bookstore</inlineHelpText>
        <label>Bookstore Purchase Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Bilingual_Multilingual__c</fullName>
        <label>Bilingual/Multilingual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Credentials__c</fullName>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_HealthySteps_Ambassador__c</fullName>
        <label>HealthySteps Ambassador</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_HealthySteps_FTE__c</fullName>
        <label>HealthySteps FTE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; .25 FTE</fullName>
                </value>
                <value>
                    <fullName>.25-.50 FTE</fullName>
                </value>
                <value>
                    <fullName>.51-.75 FTE</fullName>
                </value>
                <value>
                    <fullName>.76-.90 FTE</fullName>
                </value>
                <value>
                    <fullName>1.0 FTE</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_HealthySteps_National_Advisory__c</fullName>
        <label>HealthySteps National Advisory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_HealthySteps_Site_Status__c</fullName>
        <description>This field copies the value of the Contacts HealthySteps Site Status.</description>
        <formula>Text( Account.C4G_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field copies the value of the Contacts HealthySteps Site Status.</inlineHelpText>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_HealthySteps_Specialist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HealthySteps Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C4G_Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than a bachelor’s degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor’s degree</fullName>
                </value>
                <value>
                    <fullName>Master’s degree</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Doctoral degree (e.g., PhD, EdD)</fullName>
                </value>
                <value>
                    <fullName>Professional degree (e.g., LD, MD, DDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Licenses_Certifications__c</fullName>
        <label>Licenses/Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Organization__c</fullName>
        <description>The organization a HealthySteps Contact is associated with.</description>
        <inlineHelpText>The organization a HealthySteps Contact is associated with.</inlineHelpText>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Parent_Story__c</fullName>
        <description>User submitted parent story content from the Parents: Share Your Story Pardot form.</description>
        <inlineHelpText>User submitted parent story content from the Parents: Share Your Story Pardot form.</inlineHelpText>
        <label>Parent Story</label>
        <length>65535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C4G_Test_AdHoc_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to test triggering AdHoc Surveys for Qualtrics.</description>
        <inlineHelpText>Check this box to test triggering AdHoc Surveys for Qualtrics.</inlineHelpText>
        <label>Test AdHoc Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C4G_Test_Annual_Site_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to test triggering Annual Site Surveys for Qualtrics.</description>
        <inlineHelpText>Check this box to test triggering Annual Site Surveys for Qualtrics.</inlineHelpText>
        <label>Test Annual Site Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C4G_Test_Quarterly_Site_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to test triggering Quarterly Site Surveys for Qualtrics.</description>
        <inlineHelpText>Check this box to test triggering Quarterly Site Surveys for Qualtrics.</inlineHelpText>
        <label>Test Quarterly Site Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C4G_Training_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the Training session that a HealthySteps contact has attended as part of their Site's onboarding process.

This field is completed by the FA Attendee Contact Form connector.</description>
        <inlineHelpText>The name of the Training session that a HealthySteps contact has attended as part of their Site's onboarding process.</inlineHelpText>
        <label>HealthySteps Institute Training Attended</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C4G_Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be automatically checked once a HealthySteps Contact is added to a Training record.</description>
        <inlineHelpText>This box will be automatically checked once a HealthySteps Contact is added to a Training record.</inlineHelpText>
        <label>Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C4G_Type_of_Account__c</fullName>
        <description>What type of Account the Contact is directly associated with.</description>
        <formula>Account.RecordType.Name</formula>
        <inlineHelpText>What type of Account the Contact is directly associated with.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_ZTT_Conference_Attendance__c</fullName>
        <label>ZTT Conference Attendance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_ZTT_Member__c</fullName>
        <label>ZTT Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_ZTT_Membership_Join_Date__c</fullName>
        <label>ZTT Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFGInterestCCInfantToddlerEducators__c</fullName>
        <label>Interest:CC Infant Toddler Educators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Curricula_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_InterestCCInfantToddlerEdOnline__c</fullName>
        <label>Interest: CC Infant Toddler Ed Online</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_CC_Infant_Toddler_Ed_Online</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_InterestCompetencies__c</fullName>
        <label>Interest: Competencies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Competencies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_InterestCourseTitle__c</fullName>
        <label>Interest: Client Describes Course Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFG_InterestCrossSectorCCOnline__c</fullName>
        <label>Interest: Cross Sector CC Online</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Cross_Sector_CC_Online</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_InterestNurturingChildWellBeing__c</fullName>
        <label>Interest: Nurturing Child Well Being</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Nurturing_Child_Well_Being</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_InterestTechnicalAsstServices__c</fullName>
        <label>Interest: Client describes TA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFG_InterestTheGrowingBrain__c</fullName>
        <label>Interest: The Growing Brain</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_The_Growing_Brain</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_InterestTopicalSessions__c</fullName>
        <label>Interest: Topical Sessions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Topical_Sessions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_Number_of_Gifts_Last_FY__c</fullName>
        <description>This field is used in a customizable roll-up</description>
        <label>Number of Gifts Last FY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_Number_of_Gifts_This_FY__c</fullName>
        <description>This field is used in a customizable roll-up</description>
        <label>Number of Gifts This FY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_Number_of_Gifts_Two_FY_Ago__c</fullName>
        <description>This field is used in a customizable roll-up</description>
        <label>Number of Gifts Two FY Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_ParticipantSettings__c</fullName>
        <label>Participant: Settings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Participant_Settings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsExpectedNumber__c</fullName>
        <label>Participants: Expected Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsOtherDiscipline__c</fullName>
        <label>Participants: Other Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsOtherRole__c</fullName>
        <label>Participants: Other Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsOtherSettings__c</fullName>
        <label>Participants: Other Settings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsProfessionalRole__c</fullName>
        <label>Participants: Professional Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Participants_Professional_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_ScheduleDateRequired__c</fullName>
        <label>Schedule: Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFG_ScheduleSpecificDateRequired__c</fullName>
        <label>Schedule: Specific Date Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Schedule_Specific_Date_Required</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_Total_Gifts_Last_FY__c</fullName>
        <description>This field will be used in a customizable roll-up.</description>
        <label>Total Gifts Last FY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFG_Total_Gifts_This_FY__c</fullName>
        <description>This field will be used in a customizable roll-up field.</description>
        <label>Total Gifts This FY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFG_Total_Gifts_Two_FY_Ago__c</fullName>
        <description>This field will be used in a customizable roll-up</description>
        <label>Total Gifts Two FY Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Care2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Care2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child1Birthdate__c</fullName>
        <description>Birth date of first child.</description>
        <label>Child 1 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child2Birthdate__c</fullName>
        <description>Birth date of second child.</description>
        <label>Child 2 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child3Birthdate__c</fullName>
        <description>Birth date of third child.</description>
        <label>Child 3 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>Name of Company individual works at.</description>
        <label>Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConstituentSince__c</fullName>
        <description>Year individual has been a constituent since.</description>
        <inlineHelpText>Year individual has been a constituent since.</inlineHelpText>
        <label>Constituent Since</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Competencies_certified_trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical Competencies certified trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Critical_Competencies_provisional_traine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical Competencies provisional traine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentPositionLevel__c</fullName>
        <label>Current Position Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Direct Service Provider</fullName>
                </value>
                <value>
                    <fullName>Executive Director</fullName>
                </value>
                <value>
                    <fullName>Manager/Supervisor</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Other (Write in Below)</fullName>
                </value>
                <value>
                    <fullName>Program Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_HealthySteps_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the contact is currently a HealthySteps record type, this box is checked.  Maintained by automation</inlineHelpText>
        <label>Current HealthySteps Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_0_5_certified_trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC: 0-5 certified trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_0_5_provisional_trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC: 0-5 provisional trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTL_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DTL contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Last_Attended_AC__c</fullName>
        <inlineHelpText>Date that Contact last attended an Annual Conference. Maintained by automation</inlineHelpText>
        <label>Date Last Attended AC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Purchased_LC_Training__c</fullName>
        <inlineHelpText>Date this Contact last purchased a Learning Center training via the LMS</inlineHelpText>
        <label>Date Last Purchased LC Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Action__c</fullName>
        <inlineHelpText>Date of Contact's last action.  Maintained by automation</inlineHelpText>
        <label>Date of Last Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveredSOBYFeb26__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DeliveredSOBYFeb26</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DemandToolsMerged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DemandToolsMerged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email_Receipts_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email Receipts/Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailOptOut__c</fullName>
        <description>Captures the date/time constituent opted out of emails.</description>
        <label>Email Opt Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailStatus__c</fullName>
        <description>Remove bad (hard bounced) email addresses.</description>
        <label>Email Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asian/Pacific American</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>White/Caucasian</fullName>
                </value>
                <value>
                    <fullName>wo or More Ethnicities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FON_Account_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Active_Fellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Fellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FON_Area_of_Expertise__c</fullName>
        <label>Area of Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child Welfare</fullName>
                </value>
                <value>
                    <fullName>Early Care and Education</fullName>
                </value>
                <value>
                    <fullName>Early Intervention</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Infant/Early Childhood Mental Health</fullName>
                </value>
                <value>
                    <fullName>Other (Write in Below)</fullName>
                </value>
                <value>
                    <fullName>Parent Education/Support</fullName>
                </value>
                <value>
                    <fullName>Policy/Advocacy</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Member</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>